--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,3 +1,4 @@
+---
 version: "3"
 
 includes:
@@ -33,12 +34,11 @@ dotenv:
 
 vars:
   PROJECT_NAME: dotfiles
-  GROUP_NAME: luismayta
   ORGANIZATION: luismayta
   DOCKER_PLATFORM: linux/amd64
   REVIEWERS: luismayta
-  PYTHON_VERSION: 3.11.2
-  NODE_VERSION: 16.6.1
+  PYTHON_VERSION: 3.11.5
+  NODE_VERSION: 18.19.1
   GIT_IGNORES: linux,windows,python,node,go,zsh,sonar,terraform,ansible,intellij+all
   GOLANGCI_VERSION: 1.42.0
   README_FILE: README.md
@@ -51,6 +51,7 @@ vars:
     .task
     .terraform.lock.hcl
     *.lock.hcl
+    *.lock
     *.zip
     .external_modules
     vendor
@@ -103,12 +104,10 @@ tasks:
       - task: prettier:all
 
   upgrade:
-    run: once
     desc: Execute upgrade packages
     cmds:
-      - >-
-        poetry update
-        poetry run pre-commit autoupdate
+      - poetry update
+      - poetry run pre-commit autoupdate
 
   setup:
     desc: Setup dependences of project
