--- a/provision/diagrams/Taskfile.yml
+++ b/provision/diagrams/Taskfile.yml
@@ -2,15 +2,21 @@
 
 version: "3"
 
+vars:
+  FILES_PLANTUML:
+    sh: >-
+      find ./ -type f -name '*.plantuml'
+      | grep -v '.terraform'
+      | sort -u
+      | xargs
+
 tasks:
   build:
     desc: Build Diagrams Plantuml.
     run: once
     silent: true
     cmds:
-      - cmd: mkdir -p decks/images/diagrams
-      - cmd: mkdir -p static/images/diagrams
-      - cmd: mkdir -p docs/images/diagrams
+      - mkdir -p docs/images/diagrams
       - task: make
 
   publish:
@@ -23,24 +29,16 @@ tasks:
       - >-
         rsync -avhP --remove-source-files
         --include='*.png' --include='*/'
-        --exclude='*'
-        provision/diagrams/ ./
+        --exclude='*' provision/diagrams/ docs/images/diagrams/
 
   make:
     desc: generate files plantuml.
     cmds:
       - cmd: echo {{.FILES_PLANTUML}}
-      - cmd: |-
-          docker run
-          --platform linux/amd64
-          --rm
-          --workdir /data
-          -v {{.PWD}}:/data
-          infosisarg/plantuml {{.FILES_PLANTUML}}
-        vars:
-          FILES_PLANTUML:
-            sh: >-
-              find ./ -type f -name '*.plantuml'
-              | grep -v '.terraform'
-              | sort -u
-              | xargs
+      - >-
+        docker run
+        --platform linux/amd64
+        --rm
+        --workdir /data
+        -v {{.PWD}}:/data
+        hadenlabs/plantuml {{.FILES_PLANTUML}}
