--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,6 @@
 ci:
   autoupdate_schedule: monthly
 
-default_language_version:
-  node: 18.19.1
-
 default_stages:
   - pre-commit
 exclude: >
@@ -22,7 +19,8 @@ repos:
     rev: v2.3.0
     hooks:
       - id: codespell
-        args: [--ignore-words=.ci/linters/.codespell-ignores]
+        args:
+          - --ignore-words=.ci/linters/.codespell-ignores
         exclude: >
           (?x)^(
             go.mod|
@@ -89,7 +87,6 @@ repos:
     rev: e50751c9323b0a03f27271c57513f5c389f6591b
     hooks:
       - id: do-not-commit
-
       - id: shellcheck
         exclude: >
           (?x)^(
