--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -2,54 +2,50 @@
 version: "3"
 
 includes:
-  docs: ./provision/task/docs.yml
-
-  ansible:
-    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/main/ansible/Taskfile.yml"
   pre-commit:
-    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/main/pre-commit/Taskfile.yml"
-  github:
-    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/main/github/Taskfile.yml"
+    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/refs/heads/main/src/pre-commit/Taskfile.yml"
   changelog:
-    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/main/changelog/Taskfile.yml"
+    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/refs/heads/main/src/changelog/Taskfile.yml"
   confluence:
-    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/main/confluence/Taskfile.yml"
-  python:
-    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/main/python/Taskfile.yml"
+    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/refs/heads/main/src/confluence/Taskfile.yml"
   node:
-    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/main/node/Taskfile.yml"
+    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/refs/heads/main/src/node/Taskfile.yml"
+  python:
+    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/refs/heads/main/src/python/Taskfile.yml"
+  uv:
+    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/refs/heads/main/src/uv/Taskfile.yml"
+  pnpm:
+    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/refs/heads/main/src/pnpm/Taskfile.yml"
+  go:
+    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/refs/heads/main/src/go/Taskfile.yml"
+  gradle:
+    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/refs/heads/main/src/gradle/Taskfile.yml"
+  coursier:
+    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/refs/heads/main/src/coursier/Taskfile.yml"
   git:
-    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/main/git/Taskfile.yml"
-  # docs:
-  #   taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/main/docs/Taskfile.yml"
+    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/refs/heads/main/src/git/Taskfile.yml"
+  docs:
+    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/refs/heads/main/src/docs/Taskfile.yml"
   docker:
-    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/main/docker/Taskfile.yml"
+    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/refs/heads/main/src/docker/Taskfile.yml"
   version:
-    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/main/version/Taskfile.yml"
-  yarn:
-    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/main/yarn/Taskfile.yml"
+    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/refs/heads/main/src/version/Taskfile.yml"
   plantuml:
-    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/main/plantuml/Taskfile.yml"
-  packer:
-    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/main/packer/Taskfile.yml"
+    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/refs/heads/main/src/plantuml/Taskfile.yml"
   prettier:
-    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/main/prettier/Taskfile.yml"
+    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/refs/heads/main/src/prettier/Taskfile.yml"
   sonar:
-    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/main/sonar/Taskfile.yml"
-  sops:
-    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/main/sops/Taskfile.yml"
+    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/refs/heads/main/src/sonar/Taskfile.yml"
   keybase:
-    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/main/keybase/Taskfile.yml"
+    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/refs/heads/main/src/keybase/Taskfile.yml"
   multipass:
-    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/main/multipass/Taskfile.yml"
-  terraform:
-    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/main/terraform/Taskfile.yml"
-  terragrunt:
-    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/main/terragrunt/Taskfile.yml"
-  openssl:
-    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/main/openssl/Taskfile.yml"
+    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/refs/heads/main/src/multipass/Taskfile.yml"
   ssh:
-    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/main/ssh/Taskfile.yml"
+    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/refs/heads/main/src/ssh/Taskfile.yml"
+  openssl:
+    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/refs/heads/main/src/openssl/Taskfile.yml"
+  terraform:
+    taskfile: "https://raw.githubusercontent.com/hadenlabs/tasks/refs/heads/main/src/terraform/Taskfile.yml"
 
 env:
   DOCKER:
@@ -65,6 +61,8 @@ env:
   README_YAML: provision/generators/README.yaml
   README_TEMPLATE: provision/templates/README.tpl.md
   README_INCLUDES: file://
+  TERRAFORM_PATH: ./
+  PYTHON_PACKAGE_MANAGER: uv
 
 dotenv:
   - .env
@@ -72,17 +70,19 @@ dotenv:
 vars:
   PROJECT_NAME: dotfiles
   ORGANIZATION: luismayta
-  REVIEWERS: luismayta
   DOCKER_PLATFORM: linux/amd64
+  REVIEWERS: luismayta
   PYTHON_VERSION: 3.11.5
-  TERRAFORM_DIR: provision/terraform
-  NODE_VERSION: v20.18.3
+  NODE_VERSION: v20.9.0
+  GRADLE_VERSION: 8.4.0
+  GOLANG_VERSION: 1.22.4
   GIT_IGNORES: linux,windows,python,node,go,zsh,sonar,terraform,ansible,intellij+all
   GOLANGCI_VERSION: 1.42.0
-  TERRAFORM_VERSION: 1.10.5
+  TERRAFORM_VERSION: 1.11.4
   README_FILE: README.md
   GIT_IGNORES_CUSTOM: |
     bin
+    .project
     .scannerwork
     .secrets
     public
@@ -120,7 +120,8 @@ tasks:
   check:
     desc: "Check all dependencies"
     deps:
-      - python:check
+      - uv:check
+      - pnpm:check
       - changelog:check
       - git:check
       - docs:check
@@ -142,30 +143,50 @@ tasks:
     desc: Execute prettier files
     cmds:
       - task: prettier:all
+      - task: uv:fmt
+
+  test:
+    run: once
+    desc: Execute of test
+    cmds:
+      - task: go:test
 
   upgrade:
+    run: once
     desc: Execute upgrade packages
     cmds:
-      - poetry update
-      - poetry run pre-commit autoupdate
+      - uv update
+      - uv run pre-commit autoupdate
 
   setup:
+    run: once
     desc: Setup dependences of project
     cmds:
       - >-
         [ -e ".env" ] || cp -rf .env.example .env
-      - task: python:setup
-      - task: python:precommit
+      - task: uv:setup
+      - task: uv:precommit
       - task: git:setup
 
-  test:
-    run: once
-    desc: Execute task test all
-    cmds:
-      - task: go:test
-
   environment:
+    run: once
     desc: Setup environment of project
     cmds:
-      - task: python:environment
-      - task: node:environment
+      - task: terraform:environment
+      - task: uv:environment
+      - task: pnpm:environment
+
+  generate:
+    run: once
+    desc: Generate files
+    cmds:
+      - task: go:mockery
+      - task: go:generate
+
+  help:
+    cmds:
+      - cmd: |
+          echo 'Use "task --list" to get a list of all available tasks with a short description of what they do.'
+          echo 'There are some more tasks used as dependencies for other tasks.'
+          echo 'You can view them with "task --list-all".'
+        silent: true
