--- a/.ci/linters/markdown-link-config.json
+++ b/.ci/linters/markdown-link-config.json
@@ -6,16 +6,26 @@
     },
     {
       "pattern": "^https://github.com/luismayta/dotfiles/compare"
+    },
+    {
+      "pattern": "^mailto:.*@hadenlabs\\.com"
+    },
+    {
+      "pattern": "^http://localhost"
     }
   ],
   "replacementPatterns": [
     {
       "pattern": "^/docs",
       "replacement": "{{BASEURL}}/docs"
+    },
+    {
+      "pattern": "^/",
+      "replacement": "{{BASEURL}}/"
     }
   ],
   "timeout": "20s",
   "retryCount": 3,
   "fallbackRetryDelay": "30s",
-  "aliveStatusCodes": [200, 206]
+  "aliveStatusCodes": [200, 206, 202]
 }
