--- a/provision/diagrams/Taskfile.yml
+++ b/provision/diagrams/Taskfile.yml
@@ -16,7 +16,9 @@ tasks:
     run: once
     silent: true
     cmds:
-      - mkdir -p docs/images/diagrams
+      - cmd: mkdir -p decks/images/diagrams
+      - cmd: mkdir -p static/images/diagrams
+      - cmd: mkdir -p docs/images/diagrams
       - task: make
 
   publish:
@@ -29,7 +31,8 @@ tasks:
       - >-
         rsync -avhP --remove-source-files
         --include='*.png' --include='*/'
-        --exclude='*' provision/diagrams/ docs/images/diagrams/
+        --exclude='*'
+        provision/diagrams/ ./
 
   make:
     desc: generate files plantuml.
