--- a/.custom_zsh_plugins.txt.sample
+++ b/.custom_zsh_plugins.txt.sample
@@ -1,36 +1,42 @@
-
-
-jeffreytse/zsh-vi-mode
+# Configurations Zsh
+hadenlabs/zsh-deno
 hadenlabs/zsh-alacritty
 hadenlabs/zsh-resources
-hadenlabs/zsh-flutter
+hadenlabs/zsh-templates
+hadenlabs/zsh-ssh
 hadenlabs/zsh-tmux
 hadenlabs/zsh-starship
-hadenlabs/zsh-rvm
-luismayta/zsh-nvim
 hadenlabs/zsh-yarn
-luismayta/zsh-osx
-luismayta/zsh-apps
-hadenlabs/zsh-bitwarden
-hadenlabs/zsh-templates
 hadenlabs/zsh-git
 hadenlabs/zsh-issues
 hadenlabs/zsh-cheat
-luismayta/zsh-vscodium
-luismayta/zsh-trash
-luismayta/zsh-pazi
+luismayta/zsh-aliases
 luismayta/zsh-clean
+
+# Tools
+hadenlabs/zsh-bitwarden
 hadenlabs/zsh-docker
 hadenlabs/zsh-keybase
-hadenlabs/zsh-ssh
-luismayta/zsh-tfenv
-luismayta/zsh-rust
+luismayta/zsh-apps
+luismayta/zsh-vscodium
+luismayta/zsh-trash
 
-luismayta/zsh-aliases
-
+# DevOps & K8s
 hadenlabs/zsh-k9s
 hadenlabs/zsh-kubectl
 hadenlabs/zsh-helm
 hadenlabs/zsh-devops
+hadenlabs/zsh-tfenv
 
+# Languages
+hadenlabs/zsh-flutter
+hadenlabs/zsh-rvm
+luismayta/zsh-rust
+
+# Platform
 hadenlabs/zsh-aws
+luismayta/zsh-osx
+
+# Other
+hadenlabs/zsh-hacker
+luismayta/zsh-pazi
