build 🛠(docs): format files using prettier (#812)
Signed-off-by: Luis Mayta <luis@hadenlabs.com>

--- a/.gitignore
+++ b/.gitignore
@@ -542,6 +542,7 @@ zsdoc/data
 # End of https://www.toptal.com/developers/gitignore/api/linux,windows,python,node,go,zsh,sonar,terraform,ansible,intellij+all
 # custom git ignore files
 bin
+.project
 .scannerwork
 .secrets
 public
