feat ✨(core): implement zsh ghostty (#815)
Signed-off-by: Luis Mayta <luis@hadenlabs.com>

--- a/.custom_zsh_plugins.txt.sample
+++ b/.custom_zsh_plugins.txt.sample
@@ -1,6 +1,5 @@
 # Configurations Zsh
-hadenlabs/zsh-deno
-hadenlabs/zsh-alacritty
+hadenlabs/zsh-ghostty
 hadenlabs/zsh-resources
 hadenlabs/zsh-templates
 hadenlabs/zsh-ssh
