fix 🐛(core): change environment ksh to zsh (#817)
Signed-off-by: Luis Mayta <luis@hadenlabs.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -92,6 +92,7 @@ repos:
           (?x)^(
             .+\.provision/git/hooks/prepare-commit-msg$|
             .+\.tpl.sh$|
+            bin\/.*$|
           )$
         args:
           - --exclude=SC1072,SC1073,SC2068
